<resources>
    <string name="app_name">Art Explore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Art Explore</string>
    <string name="nav_header_subtitle">artexploreteam@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Lorem">Deskripsi pariwisata
    </string>
    <string name="menu_home">Home</string>
    <string name="menu_pertunjukan">Pertunjukan Seni</string>
    <string name="menu_daerah">Daerah Pertunjukan</string>
    <string name="menu_lokasi">Lokasi Pertunjukan</string>
    <string name="menu_tiket">Tiket Booking</string>
    <string name="menu_about">About Us</string>
    <string name="title_activity_pesan">Pesan</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
