<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pertunjukan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_pertunjukan" />
        <item
            android:id="@+id/nav_daerah"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_daerah" />
        <item
            android:id="@+id/nav_lokasi"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_lokasi" />
    </group>

    <item android:title="Booking">
        <menu>
            <item
                android:id="@+id/nav_tiket"
                android:icon="@drawable/ic_book_black_24dp"
                android:title="@string/menu_tiket" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
